Extension enabled per-default on installation.

--- a/popup.html
+++ b/popup.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Discord Picture-in-Picture Extension</title>
+  <title>PiP Toggle</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    label {
-      display: block;
-      margin-bottom: 10px;
+      width: 200px;
+      padding: 10px;
     }
   </style>
 </head>
 <body>
-  <h1>Discord Picture-in-Picture Extension</h1>
-  <p>This extension enables Picture-in-Picture mode for all video elements on the Discord website.</p>
   <label>
-    <input type="checkbox" id="toggleExtension"> Enable Extension
+    <input type="checkbox" id="toggleButton">
+    Enable Picture-in-Picture
   </label>
   <script src="popup.js"></script>
 </body>
